# dtms-client

./: .gitignore  pyproject.toml
dtms-client/: DMTSClient.py
dtms_client/: DMTSClient.py  DTMSClient.py
tests/: test_client.py
