[tool.poetry]
name = "dtms-client"
version = "0.1.0"
description = ""
authors = ["Shahriyar Shawon <ShahriyarShawon321@gmail.com>"]
readme = "README.md"
packages = [{include = "dtms_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
yarl = "^1.8.2"
cattrs = "^22.2.0"
attrs = "^22.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
